[package]
name = "playground-webapp-controller"
version = "0.0.1"
authors = ["Hyeseong Kim <tim@daangn.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.10"
serde_json = "1.0.67"
regex = "1"
mime = "0.3.16"
mime_guess = "2.0.4"

zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
